--- a/examples/app_rmii_100Mbit_icmp/doc/rst/AN00120.rst
+++ b/examples/app_rmii_100Mbit_icmp/doc/rst/AN00120.rst
@@ -11,7 +11,7 @@ Overview
 
 The application note shows the use of the XMOS Ethernet library. The
 library allows multiple clients to access the Ethernet hardware.
-This application note uses the real-time RMII MAC which uses
+This application note demonstrates the real-time RMII MAC which uses
 four cores and provides high performance streaming data, accurate
 packet timestamping, priority queuing and 802.1Qav traffic shaping.
 
@@ -25,8 +25,8 @@ the xCORE device.
 The application communicates with the Ethernet MAC that drives the RMII
 data interface to the PHY. A separate PHY driver configures the PHY
 via the SMI serial interface. The application is tested on the ``xk_eth_xu316_dual_100m``
-board which is an xcore.ai based board. It also has two `TI DP83826E <https://www.ti.com/product/DP83826E>`_ PHYs
-connected to it and can run applications requiring up to two ethernet ports.
+board which is an xcore.ai based board. It has two `TI DP83826E <https://www.ti.com/product/DP83826E>`_ PHYs
+connected to it and can support applications requiring up to two ethernet ports.
 This application instantiates one RMII MAC port that connects to 
 DP83826E PHY_0 on the board.
 
@@ -44,10 +44,11 @@ Thread Diagram
 
    Application thread diagram
 
-The application communicates with the Ethernet MAC that drives the RMII
-data interface to the PHY. A separate PHY driver configures the PHY
-via the SMI serial interface.
+The thread diagram shows how the various functions are mapped to the threads inside the xCORE. The hardware platform maps the RMII pins to tile[0] and the SMI pins to tile[1] and hence the associated MAC and SMI tasks must be placed accordingly. Note that the PHY driver task can be combined with the SMI interface by the xC compiler so that it only occupies one hardware thread. The application itself, ICMP server, has no need to access IO ports and communicates via interfaces and so may be placed on either tile however is on tile[0] in this example.
 
+The RMII ethernet MAC itself always consists of four hardware threads which use shared memory to communicate and hence are always place on the same tile as each other.
+
+This particular example only uses 4 + 1 + 1 (6) of the total 16 hardware threads on the xCORE and less than 4% (40 kB) of the total RAM (1024 kB) and so has plenty of room for other functionality.
 
 Building the Application
 ========================
@@ -87,10 +88,10 @@ The Ethernet library requires several ports to communicate with the
 Ethernet PHY. These ports are declared in the main program file
 (``main.xc``). In this examples the ports are set up for the PHY 0 on the ``xk_eth_xu316_dual_100m``
 board which is the PHY in the top left corner of the board. Note that, in the default hardware configuration,
-it is also necessary to populate PHY_1 (top middle of the board) due to the way the clocks are distributed.
+it is also necessary to populate PHY_1 (top middle of the board) due to the way the 50 MHz ethernet clock is distributed.
 
-Actual port names such as ``XS1_PORT_1A`` are specified in XN file ``xk-eth-xu316-dual-100m.xn`` and the source code refers
-to them with symbolic names such as ``PHY_0_TX_EN``, with the actual to symbolic name mapping specified in the xn file:
+Actual port names such as ``XS1_PORT_1A`` are specified in the XN file ``xk-eth-xu316-dual-100m.xn`` and the source code refers
+to them with symbolic names such as ``PHY_0_TX_EN``, with the actual to symbolic name mapping being specified in the XN file:
 
 .. literalinclude:: ../../src/main.xc
    :start-at: port p_phy_rxd
@@ -126,7 +127,7 @@ It internally starts the four tasks, ``rmii_master_rx_pins_4b``, ``rmii_master_t
 and ``mii_ethernet_server``, that make up the MAC implementation.
 These tasks handle communicating with the PHY at the pin level (``rmii_master_rx_pins_4b``, ``rmii_master_tx_pins``),
 filtering received packets based on a MAC address lookup table based filtering, moving them
-into the receive queues ((``mii_ethernet_filter``) and communicating with the client processes,
+into the receive queues (``mii_ethernet_filter``) and communicating with the client processes,
 facilitating packet transfer between the clients and the network (``mii_ethernet_server``).
 
 The ``rmii_ethernet_rt_mac`` tasks takes the previously declared ports as arguments as well as the required buffer size for the packet
