Use correct HW setup diagram

--- a/examples/AN00199_gigabit_ethernet_demo_explorerkit/doc/rst/AN00199.rst
+++ b/examples/AN00199_gigabit_ethernet_demo_explorerkit/doc/rst/AN00199.rst
@@ -182,6 +182,12 @@ Demo Hardware Setup
  * Connect the ethernet jack to the host PC or to the network switch
    using an ethernet cable.
 
+
+.. figure:: images/hardware_setup.png
+   :width: 80%
+
+   Hardware Setup
+
 |newpage|
 
 Building and running the demo device
